# weresync

./: .gitignore  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  README.rst  Roadmap.org  build-and-upload  pip-release.sh  requirements.txt  setup.cfg  setup.py  weresync-dbus.conf  weresync.service
.github/: ISSUE_TEMPLATE.md
debian/: README.source  changelog  control  debhelper-build-stamp  files  manpage.1  menu  rules  watch  weresync.doc-base.EX
debian/patches/: egg-info  series
debian/weresync-doc/DEBIAN/: control  md5sums
debian/weresync/DEBIAN/: control  md5sums
debian/weresync/usr/share/doc/weresync/: copyright
docs/: Makefile  weresync.1.rst
docs/source/: api.rst  bootloader.rst  conf.py  global.rst.inc  gui.rst  index.rst  installation.rst  issues.rst  translation.rst  weresync.rst
docs/source/_templates/: homepage.html
src/resources/locale/en/LC_MESSAGES/: weresync.mo
src/weresync/: device.py  exception.py  gui.py  interface.py  utils.py
src/weresync/daemon/: copier.py  daemon.py  device.py
src/weresync/interface/: cli.py  dbus_client.py  gui.py
src/weresync/plugins/: __init__.py  weresync_grub2.py  weresync_syslinux.py  weresync_uuid_copy.py
src/weresync/resources/: weresync-gui.desktop
src/weresync/resources/locale/en/LC_MESSAGES/: weresync.po
tests/: test_device.py
