[tool:pytest]
testpaths = tests

[metadata]

license_file = LICENSE.txt

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1

[upload_sphinx]
upload-dir = docs/build/html

[flake8]
ignore =
         # Line break before binary operators, PEP8 actually recommends
         # doing this
         W503,
builtins = _         